src/tests/fixtures/interfaces/TagAttachedToWrongNode.ts.expected
-----------------
INPUT
----------------- 
/** @GQLInterface Person */
function Foo() {}

-----------------
OUTPUT
-----------------
Error: `@GQLInterface` can only be used on interface declarations.:
 --> src/tests/fixtures/interfaces/TagAttachedToWrongNode.ts:1:5

1 | /** @GQLInterface Person */
  |     ^^^^^^^^^^^^^^^^^^^^^ 
  | function Foo() {}
